@@ -13,7 +13,8 @@ devel branch:
                Use -Oz compiler flag rather than -Os for compiling Python
                wrappers to avoid "illegal hardware instruction" error with
                Clang 14 on macOS x86_64. Fixed issue reconstructing triclinic
-               box objects from a binary data stream.
+               box objects from a binary data stream. Added missing streaming
+               operators to Sire.Unit.GeneralUnit.
 
     [2022.2.0] March 2022 - Fixed formatting of SOLVENT_POINTERS flag in
                AmberPrm7 parser. Removed duplicate definition of sigma_av
